--- a/mentor/composer.json
+++ b/mentor/composer.json
@@ -31,6 +31,7 @@
         "drupal/admin_devel": "^3.0@RC",
         "drupal/admin_menu_toolbar": "^3.0@RC",
         "drupal/backup_migrate": "^3.5",
+        "drupal/ckeditor": "^1.18",
         "drupal/composer_autoloader": "^1.0",
         "drupal/drupal": "~7",
         "drupal/extlink": "^1.20",
@@ -42,6 +43,8 @@
         "drupal/pathauto": "^1.3",
         "drupal/styleguide": "^1.1",
         "drupal/styleguide_palette": "^1.1",
+        "drupal/token": "^1.7",
+        "drupal/webform": "^4.17",
         "drush/drush": "~8.0",
         "symfony/filesystem": "~2.7|^3",
         "webflo/drupal-finder": "^1.0.0"
